--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@mantine/core": "7.16.0",
-    "@mantine/hooks": "7.16.0",
+    "@mantine/core": "^7.16.0",
+    "@mantine/hooks": "^7.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3"
@@ -46,7 +46,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jsdom": "^26.0.0",
     "postcss": "^8.5.1",
-    "postcss-preset-mantine": "1.17.0",
+    "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.4.2",
     "prop-types": "^15.8.1",
